@@ -1,6 +1,13 @@
 # ChangeLog for x11-misc/karamba
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/x11-misc/karamba/Attic/ChangeLog,v 1.4 2003/04/05 16:10:55 shermann Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/x11-misc/karamba/Attic/ChangeLog,v 1.5 2003/04/07 02:43:33 shermann Exp $
+
+*karamba-0.15 (07 Mar 2003)
+
+  07 Mar 2003; Stephan Hermann <sh@sourcecode.de>
+  New release.
+  Added a DEVICE parameter to the network sensor
+  Disk sensor support for mounted network filesystems
 
 *karamba-0.14-r1 (05 Mar 2003)
 
